Tue Oct 24 20:00:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::fcntl): Behave properly when passed
	previous version of O_NDELAY.
	* syscalls.cc: Move OLD_O_NDELAY to winsup.h.
	* winsup.h: Define OLD_O_NDELAY now.

Mon Oct 23 21:47:55 2000  Christopher Faylor <cgf@cygnus.com>

	* exceptions.cc (signal_exit): Kill any executing child process if
	we're dying.
	* path.h: Remove unneeded extern.
	* spawn.cc (std_suffixes): Make static.  Don't set dwProcessId here
	since it makes the process unsignalable.  Set strace flag that this is
	an execed process stub.
	* strace.cc (strace::vsprntf): Use strace flag to indicate when to
	visually flag that this is an exec stub.
	* include/sys/strace.h (strace): Add 'execing' flag.

Mon Oct 23 16:43:33 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.cc (proc_subproc): Don't send a false positive if WNOHANG and
	no processes are available for waiting.

Mon Oct 23 22:27:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fhandler.cc (fhandler_base::fcntl): Setting flags in F_SETFL
	branch according to Linux documentation.

Mon Oct 23 21:43:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* fcntl.cc (_fcntl): Rearrange as wrapper function. Move all
	functionality except F_DUPFD to fhandler classes.
	* fhandler.cc (fhandler_base::fcntl): New method.
	* net.cc (fhandler_socket::fcntl): Ditto.
	* fhandler.h (class fhandler_base): Add method prototype for fcntl().
	(class fhandler_socket): Ditto.

Mon Oct 23 12:44:35 2000  Christopher Faylor <cgf@cygnus.com>

	* sigproc.cc (proc_subproc): Correctly handle flags for WNOHANG case.

Mon Oct 23 10:00:00 2000  Corinna Vinschen <corinna@vinschen.de>

	* security.cc: Eliminate C++ comments throughout.

Sun Oct 22 23:33:00 2000  Christopher Faylor <cgf@cygnus.com>

	* fork.cc (fork): Set sigframe here, since it can pause for a
	considerable amount of time.
	* environ.cc (_addenv): Add debugging.
	* fhandler.cc: Eliminate unneeded include.